@@ -1,5 +1,5 @@
 /*
- * "$Id: classes.c,v 1.34.2.19 2004/02/26 20:12:13 mike Exp $"
+ * "$Id: classes.c,v 1.34.2.20 2004/04/20 13:40:30 mike Exp $"
  *
  *   Printer class routines for the Common UNIX Printing System (CUPS).
  *
@@ -600,7 +600,7 @@ SaveAllClasses(void)
   * Restrict access to the file...
   */
 
-  fchown(cupsFileNumber(fp), getuid(), Group);
+  fchown(cupsFileNumber(fp), RunUser, Group);
   fchmod(cupsFileNumber(fp), ConfigFilePerm);
 
  /*
@@ -676,5 +676,5 @@ SaveAllClasses(void)
 
 
 /*
- * End of "$Id: classes.c,v 1.34.2.19 2004/02/26 20:12:13 mike Exp $".
+ * End of "$Id: classes.c,v 1.34.2.20 2004/04/20 13:40:30 mike Exp $".
  */
