@@ -1,5 +1,5 @@
 /*
- * "$Id: client.c,v 1.91.2.80 2004/03/24 21:28:56 mike Exp $"
+ * "$Id: client.c,v 1.91.2.81 2004/04/20 13:40:30 mike Exp $"
  *
  *   Client routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -1553,7 +1553,7 @@ ReadClient(client_t *con)		/* I - Client to read from */
             SetStringf(&con->filename, "%s/%08x", RequestRoot, request_id ++);
 	    con->file = open(con->filename, O_WRONLY | O_CREAT | O_TRUNC, 0640);
 	    fchmod(con->file, 0640);
-	    fchown(con->file, getuid(), Group);
+	    fchown(con->file, RunUser, Group);
 
             LogMessage(L_DEBUG2, "ReadClient: %d REQUEST %s=%d", con->http.fd,
 	               con->filename, con->file);
@@ -1796,7 +1796,7 @@ ReadClient(client_t *con)		/* I - Client to read from */
           SetStringf(&con->filename, "%s/%08x", RequestRoot, request_id ++);
 	  con->file = open(con->filename, O_WRONLY | O_CREAT | O_TRUNC, 0640);
 	  fchmod(con->file, 0640);
-	  fchown(con->file, getuid(), Group);
+	  fchown(con->file, RunUser, Group);
 
           LogMessage(L_DEBUG2, "ReadClient: %d REQUEST %s=%d", con->http.fd,
 	             con->filename, con->file);
@@ -3228,7 +3228,7 @@ pipe_command(client_t *con,		/* I - Client connection */
     * Child comes here...  Close stdin if necessary and dup the pipe to stdout.
     */
 
-    if (getuid() == 0)
+    if (!RunUser)
     {
      /*
       * Running as root, so change to a non-priviledged user...
@@ -3395,5 +3395,5 @@ CDSAWriteFunc(SSLConnectionRef connection,	/* I  - SSL/TLS connection */
 
 
 /*
- * End of "$Id: client.c,v 1.91.2.80 2004/03/24 21:28:56 mike Exp $".
+ * End of "$Id: client.c,v 1.91.2.81 2004/04/20 13:40:30 mike Exp $".
  */
