@@ -1,5 +1,5 @@
 /*
- * "$Id: job.c,v 1.124.2.84 2004/02/25 20:01:37 mike Exp $"
+ * "$Id: job.c,v 1.124.2.85 2004/04/20 13:40:30 mike Exp $"
  *
  *   Job management routines for the Common UNIX Printing System (CUPS).
  *
@@ -947,7 +947,7 @@ SaveJob(int id)			/* I - Job ID */
   }
 
   fchmod(fd, 0600);
-  fchown(fd, getuid(), Group);
+  fchown(fd, RunUser, Group);
 
   ippWriteFile(fd, job->attrs);
 
@@ -2748,7 +2748,7 @@ start_process(const char *command,	/* I - Full path to command */
     * Change user to something "safe"...
     */
 
-    if (!root && getuid() == 0)
+    if (!root && !RunUser)
     {
      /*
       * Running as root, so change to non-priviledged user...
@@ -2877,5 +2877,5 @@ set_hold_until(job_t *job, 		/* I - Job to update */
 
 
 /*
- * End of "$Id: job.c,v 1.124.2.84 2004/02/25 20:01:37 mike Exp $".
+ * End of "$Id: job.c,v 1.124.2.85 2004/04/20 13:40:30 mike Exp $".
  */
